[tool.poetry]
name = "causalinfo"
version = "1.2.0"
description = "Information Measures on Causal Graphs"
authors = ["Brett Calcott <brett.calcott@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.1"
numpy = "^1.19.1"
pandas = "^1.1.0"
networkx = "^2.4"
jupyterlab = {version = "^2.2.5", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
